Adiciona configurações de deploy do GitHub Pages

--- a/app-main/frontend/package.json
+++ b/app-main/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage": "https://isacosta15.github.io/meu-portifolio",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -57,7 +58,9 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
