Fix: Usando npx para executar gh-pages

--- a/app-main/frontend/package.json
+++ b/app-main/frontend/package.json
@@ -60,7 +60,7 @@
     "build": "craco build",
     "test": "craco test",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npx gh-pages -d build"
   },
   "browserslist": {
     "production": [
