--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,10 +1,12 @@
 name: Deploy GitHub Pages
 
+# Dispara o workflow toda vez que houver push na branch main
 on:
   push:
     branches:
       - main
 
+# Permissões necessárias para publicar
 permissions:
   contents: read
   pages: write
@@ -14,25 +16,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment:
-      name: github-pages
+      name: github-pages  # ⚠️ Crie este environment em Settings > Environments
 
     steps:
+      # 1️⃣ Faz checkout do repositório
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Upload apenas os arquivos do site
-      - name: Upload site artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages
-          path: |
-            index.html
-            css/
-            js/
-            assets/
-            images/
-
+      # 2️⃣ Publica os arquivos diretamente (sem upload-artifact)
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
-        with:
-          artifact_name: github-pages
+
+        # ⚠️ Não precisa de build, npm ou folder. Ele publica tudo na branch padrão do Pages.
